iowow (1.4.5) UNRELEASED; urgency=medium

  * Added  iwstree iteration API (iwstree.h)
  * Added `iwpool_used_size` (iwpool.h)
  * Added `iwstree_int64_cmp` (iwstree.h)
  * Added `IW_DEPRECATED` (basedefs.h)

 -- Anton Adamansky <adamansky@gmail.com>  Sun, 03 May 2020 01:08:50 +0700

iowow (1.4.4) testing; urgency=medium

  * Fixed incorrect copying of cursor key data in `IWDB_COMPOUND_KEYS` mode (iwkv.c)
  * Adde compound key example code (compoundkeys1.c)
  * Added `iwstree_visit` (iwstree.h)

 -- Anton Adamansky <adamansky@gmail.com>  Sat, 02 May 2020 19:38:31 +0700

iowow (1.4.3) testing; urgency=medium

  * Fixed errors found by PVS studio

 -- Anton Adamansky <adamansky@gmail.com>  Fri, 24 Apr 2020 00:16:42 +0700

iowow (1.4.2) testing; urgency=medium

  * Added IWULIST, IWLIST implementation (iwarr.h)
  * Added iwpool_split_string (iwpool.h)
  * Added iwpool_printf (iwpool.h)
  * Added iwpool_printf_split (iwpool.h)
  * Added iwxstr_shift (iwxstr.h)
  * Added `#define RCHECK` (basedefs.h)
  * Better error handling of `kh_put`

 -- Anton Adamansky <adamansky@gmail.com>  Mon, 20 Apr 2020 16:23:50 +0700

iowow (1.4.1) testing; urgency=medium

  * Fixed possible data corruption in `_fsm_blk_allocate_aligned_lw` (iwfsmfile.c)
  * Better new SBLK blocks locality  (performance)

 -- Anton Adamansky <adamansky@gmail.com>  Sat, 07 Mar 2020 23:23:13 +0700

iowow (1.4.0) testing; urgency=medium

  * Implemented new compact and performant data storage format v2
  * Added WiredTiger v3.2.1 benchmarks
  * Added BerkeleyDB v5.3.28 benchmarks
  * Added TokyoCabinet v1.4.48 benchmarks

 -- Anton Adamansky <adamansky@gmail.com>  Fri, 06 Mar 2020 23:23:16 +0700

iowow (1.3.37) testing; urgency=medium

  * Added iwrc iwp_mkdirs(const char *path) (iwp.h)
  * Added uint32_t iwu_x31_u32_hash(const char *s) (iwutils.h)
  * Added iwu_replace() (iwutils.h)
  * Added RCGA macro definition
  * Removed IW_EXPORT iwrc iwkv_db_last_access_time(IWDB db, uint64_t *ts)